--- a/angular.json
+++ b/angular.json
@@ -16,19 +16,14 @@
             "outputPath": "dist/ains",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets",
+              "src/favicon.ico"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css",
+  "node_modules/@fortawesome/fontawesome-free/css/all.min.css"],
             "scripts": []
           },
           "configurations": {
@@ -73,20 +68,14 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets",
+              "src/favicon.ico"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css",
+  "node_modules/@fortawesome/fontawesome-free/css/all.min.css"],
             "scripts": []
           }
         }
